--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.19.0",
     "chalk": "^4.1.0",
     "config": "^3.3.2",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-error": "^0.0.2",
     "express-async-errors": "^3.1.1",
